# tyutool

./: .gitignore  README.md  README_DEV.md  package-lock.json  package.json  pyproject.toml
src/: App.tsx
tests/esptool/: esptool.py  image_gen.py  run.sh
tests/esptool/esptool/: __init__.py  cmds.py  loader.py
tyutool/cli/: cli_monitor.py
tyutool/flash/bk7231n/: bk7231n_flash.py
tyutool/flash/t5/: t5_flash.py
tyutool/util/: tyutool_upgrade.py  util.py
