[tool.poetry]
name = "tyutool"
version = "0.1.0"
description = ""
authors = ["denglk <denglk@tuya.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyside6 = "6.4.2"
click = "^8.1.3"
pyserial = "^3.5"
tqdm = "^4.65.0"
rich = "^13.3.2"
requests = "^2.28.2"
setuptools = "<70.0.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
